@@ -158,9 +158,8 @@ static void unpack_block(struct module_data *m, uint16 bnum, uint8 *from)
 			case 0x00:	/* arpeggio */
 			case 0x01:	/* slide up */
 			case 0x02:	/* slide down */
-				break;
-			case 0x03:	/* vibrato */
-				event->fxt = FX_VIBRATO;
+			case 0x03:	/* portamento */
+			case 0x04:	/* vibrato? */
 				break;
 			case 0x0c:	/* set volume (BCD) */
 				event->fxp = MSN(event->fxp) * 10 +
