@@ -18,6 +18,7 @@ Stable versions
 	- fix loop count reset when restarting module
 	- fix MMD0-3 pitch slides (reported by Simon Spiers)
 	- fix MED4 pattern reading (reported by Simon Spears)
+	- fix MED2/3/4 portamento effect
 	- fix Stonecracker depacker
 	- fix IT envelopes with no envelope points
 
